{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 1122,
  "lineage": "8b093df7-a8a3-ef46-2ae3-762967c782a4",
  "resources": [
    {
      "module": "module.internet-gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:234415669793:internet-gateway/igw-0232b081a3421c884",
            "id": "igw-0232b081a3421c884",
            "owner_id": "234415669793",
            "tags": {
              "Environment": "test",
              "Name": "test-igw"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-igw",
              "Owner": "DevOps Team",
              "Purpose": "Creating infrastructure resources via Terraform"
            },
            "vpc_id": "vpc-0b1b18b78eca8a757"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-route-table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:234415669793:route-table/rtb-0a06040349b53d8e9",
            "id": "rtb-0a06040349b53d8e9",
            "owner_id": "234415669793",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0232b081a3421c884",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "test",
              "Name": "test-route-table-public"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-route-table-public",
              "Owner": "DevOps Team",
              "Purpose": "Creating infrastructure resources via Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1b18b78eca8a757"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet-gateway.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-subnet-one",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:234415669793:subnet/subnet-079559a5688f40264",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.3.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079559a5688f40264",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "234415669793",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "test-public-subnet-one",
              "kubernetes.io/cluster/test-tradition-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-public-subnet-one",
              "Owner": "DevOps Team",
              "Purpose": "Creating infrastructure resources via Terraform",
              "kubernetes.io/cluster/test-tradition-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b1b18b78eca8a757"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-subnet-one-route-table-association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0102e9a2985428e23",
            "route_table_id": "rtb-0a06040349b53d8e9",
            "subnet_id": "subnet-079559a5688f40264"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.internet-gateway.aws_internet_gateway.igw",
            "module.public-route-table.aws_route_table.route-table",
            "module.public-subnet-one.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-subnet-three",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:234415669793:subnet/subnet-0e57cad503d09433a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.3.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e57cad503d09433a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "234415669793",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "test-public-subnet-three",
              "kubernetes.io/cluster/test-tradition-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-public-subnet-three",
              "Owner": "DevOps Team",
              "Purpose": "Creating infrastructure resources via Terraform",
              "kubernetes.io/cluster/test-tradition-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b1b18b78eca8a757"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-subnet-three-route-table-association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099ebc37d924289b6",
            "route_table_id": "rtb-0a06040349b53d8e9",
            "subnet_id": "subnet-0e57cad503d09433a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.internet-gateway.aws_internet_gateway.igw",
            "module.public-route-table.aws_route_table.route-table",
            "module.public-subnet-three.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-subnet-two",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:234415669793:subnet/subnet-0bd483de2b852f0bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.3.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd483de2b852f0bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "234415669793",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "test-public-subnet-two",
              "kubernetes.io/cluster/test-tradition-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-public-subnet-two",
              "Owner": "DevOps Team",
              "Purpose": "Creating infrastructure resources via Terraform",
              "kubernetes.io/cluster/test-tradition-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b1b18b78eca8a757"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-subnet-two-route-table-association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd0b8ccfd7f781a6",
            "route_table_id": "rtb-0a06040349b53d8e9",
            "subnet_id": "subnet-0bd483de2b852f0bc"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.internet-gateway.aws_internet_gateway.igw",
            "module.public-route-table.aws_route_table.route-table",
            "module.public-subnet-two.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.task-two-resources[0].module.task-two-loadbalancer-security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:234415669793:security-group/sg-00b01269ec3dce781",
            "description": "EKS Load Balancer Security Group",
            "egress": [],
            "id": "sg-00b01269ec3dce781",
            "ingress": [],
            "name": "test-task-two-loadbalancer-security-group",
            "name_prefix": "",
            "owner_id": "234415669793",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "test",
              "Name": "test-task-two-loadbalancer-security-group"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-task-two-loadbalancer-security-group",
              "Owner": "DevOps Team",
              "Purpose": "Creating infrastructure resources via Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1b18b78eca8a757"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.task-two-resources[0].module.task-two-loadbalancer-security-group-egress-rule",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-rule-cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "http",
            "from_port": 0,
            "id": "sgrule-1591518170",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00b01269ec3dce781",
            "security_group_rule_id": "sgr-02be3e03d890f04e2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.task-two-resources.module.task-two-loadbalancer-security-group.aws_security_group.security-group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.task-two-resources[0].module.task-two-loadbalancer-security-group-http-rule",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-rule-cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "176.234.135.65/32"
            ],
            "description": "http",
            "from_port": 80,
            "id": "sgrule-1629982712",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00b01269ec3dce781",
            "security_group_rule_id": "sgr-02b3c5a7597992b53",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.http.client-ip",
            "module.task-two-resources.module.task-two-loadbalancer-security-group.aws_security_group.security-group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:234415669793:vpc/vpc-0b1b18b78eca8a757",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.3.0.0/16",
            "default_network_acl_id": "acl-06f278eac33c81c27",
            "default_route_table_id": "rtb-048581e4922818cde",
            "default_security_group_id": "sg-0a236714a685d999e",
            "dhcp_options_id": "dopt-00445ca9dcf481dd7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b1b18b78eca8a757",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-048581e4922818cde",
            "owner_id": "234415669793",
            "tags": {
              "Name": "test-vpc"
            },
            "tags_all": {
              "Name": "test-vpc",
              "Owner": "DevOps Team",
              "Purpose": "Creating infrastructure resources via Terraform"
            }
          }
        }
      ]
    }
  ]
}